--- a/downtown.html
+++ b/downtown.html
@@ -48,7 +48,7 @@
 					Since many of their 1,000 items - products either created by local craftspeople or products 
 					simply evoking a Wisconsin way of life - are homemade designs and we offer exclusive in-house
 					brands, the goodies provided by The Local Store are both distinctive and memorable - two ideal
-					qualities of a great gift!</a></p>
+					qualities of a great gift!</p>
 					<h3><a href="https://www.thelocalstore.org/" target="_blank">Website</a></h3>
 					<h2>Volume One Gallery</h2>
 					<p>The Volume One Gallery is a part of The Local Store, The vintage space features high ceilings, 
