--- a/murals.html
+++ b/murals.html
@@ -22,24 +22,25 @@
 		<div id="content">
 		<h3 id="text">Eau Claire has a thriving creative and arts community, thoughout Eau Claire you can find many amazing murals 
 			created by various talented artists. In recent years murals have been popping up everywhere, here are a few of my
-			favorites!<h3>
-		<div id="slides">
+			favorites!</h3>
+			<div id="slides">
 				<button onclick="prev()" id="prev">Prev</button>
 				<img class="mySlides" src="images/murals/colorblock1.jpg" alt="Photo of a mural on Colorblock">
+				<img class="mySlides" src="images/murals/cascade.jpg" alt="The Cascade Mural in Eau Claire">	
+				<img class="mySlides" src="images/murals/artisanforge.png" alt="Mural on a garage door at ArtisanForge">
 				<img class="mySlides" src="images/murals/colorblock2.jpg" alt="Photo of a mural on Colorblock">
-				<img class="mySlides" src="images/murals/colorblock3.jpg" alt="Photo of a mural on Colorblock">
-				<img class="mySlides" src="images/murals/colorblock4.jpg" alt="Photo of a mural on Colorblock">
-				<img class="mySlides" src="images/murals/colorblock5.jpg" alt="Photo of a mural on Colorblock">
 				<img class="mySlides" src="images/murals/jus.jpg" alt="Mural on JU's">
 				<img class="mySlides" src="images/murals/loveiskey.jpg" alt="Mural that says Love is Key">
+				<img class="mySlides" src="images/murals/colorblock3.jpg" alt="Photo of a mural on Colorblock">
 				<img class="mySlides" src="images/murals/ramones.jpg" alt="Mural that says VOTE on the side of Ramones">
 				<img class="mySlides" src="images/murals/skinprints.jpg" alt="Mural on a tatooparlor">
 				<img class="mySlides" src="images/murals/tbp.jpg" alt="The TBP Mural in Eau Claire">
-				<img class="mySlides" src="images/murals/artisanforge.png" alt="Mural on a garage door at ArtisanForge">
+				<img class="mySlides" src="images/murals/colorblock4.jpg" alt="Photo of a mural on Colorblock">
+				<img class="mySlides" src="images/murals/colorblock5.jpg" alt="Photo of a mural on Colorblock">
 				<img class="mySlides" src="images/murals/artisanforge2.jpg" alt="Mural on a garage door at ArtisanForge">
-				<img class="mySlides" src="images/murals/boniver.jpg" alt="A mural for Bon Iver a musicain">
-				<img class="mySlides" src="images/murals/cascade.jpg" alt="The Cascade Mural in Eau Claire">				
+				<img class="mySlides" src="images/murals/boniver.jpg" alt="A mural for Bon Iver a musicain">			
 				<button onclick="next()" id="next">Next</button>
+			</div>
 		</div>
 	</div>
 </body>
