--- a/quiz.html
+++ b/quiz.html
@@ -115,8 +115,8 @@
 			</form>
 			<div id="result">
 				<h3>You Scored</h3>
-				<h3 id="score"></h3>
-				<h3 id="percent"></h3>
+				<h3 id="score">0/10</h3>
+				<h3 id="percent">0%</h3>
 			</div>
 		</div>
 	</div>
