--- a/river.html
+++ b/river.html
@@ -5,6 +5,7 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="css/styles.css" />
+	<link rel="stylesheet" type="text/css" href="css/river.css" />
 	<link rel="icon" type="image/png" href="images/favicon.png"/>
 	<link href="https://fonts.googleapis.com/css2?family=Grandstander:ital,wght@0,100;1,400&display=swap" rel="stylesheet">
 </head>
@@ -16,6 +17,18 @@
 		</div>
 		<div id="homelinkcontainer">
 		<a href="index.html" id="homelink">Home</a>
+		</div>
+		<div id="content">
+			<h1>Chippewa River</h1>
+			<div id="images">
+				<img src="images/river1.jpg" alt="photo of the Chippewa River" id="image1"/>
+				<img src="images/river2.jpg" alt="People tubing down the Chippewa River" id="image2"/>
+			</div>
+			<p>Rich in history and senic beauty the Chippewa River is navigable for most of its length. The 40 mile stretch
+			bellow the dam at Eau Claire is a popluar for kyaking, tubing, and canoeing. The river is the centerpiece of the
+			Upper Chippewa River Basin. The Flambeau, Jump, Elk, Thornapple, and Couderay Rivers all feed into the Chippewa River.
+			The Chippewa River has rich logging history. The entire basin was logged from the 1850's to about 1906. The river 
+			provided a waterway to float timber from northern Wisconsin to the Mississippi River.</p>
 		</div>
 	</div>
 </body>
