--- a/uwec.html
+++ b/uwec.html
@@ -5,6 +5,7 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="css/styles.css" />
+	<link rel="stylesheet" type="text/css" href="css/uwec.css" />
 	<link rel="icon" type="image/png" href="images/favicon.png"/>
 	<link href="https://fonts.googleapis.com/css2?family=Grandstander:ital,wght@0,100;1,400&display=swap" rel="stylesheet">
 </head>
@@ -16,6 +17,54 @@
 		</div>
 		<div id="homelinkcontainer">
 		<a href="index.html" id="homelink">Home</a>
+		</div>
+		<div id="content">
+			<h2>The University of Wisconsin: Eau Claire</h2>
+			<p>Founded in 1916 the University of Wisconsin Eau Claire began as a school to eduacate school teachers and principals.
+				UWEC is located on the banks of the Chippewa River close to Water Street. Named Wisconsin's most beautiful campus
+				Eau Claire offers over 150 academic programs and has over 230 student organizations to chose from.</p>
+			<img src="images/uwec2.jpg" alt="Arial view of the campus at UWEC" id="uwecpic"/>
+			<div class="contentcontainer">
+				<div class="left">
+					<h3>About</h3>
+					<p>Ranked amgon the top five regional public institutions in the midwest every year since 1995</p>
+					<p>More Than 28 buildings spanning across 333 acres</p>
+					<p>Average starting salary of $45,773 post graduation</p>
+					<p>Ranked #1 in undergrad collaborative resarch, more than 165 acres dedicated to environmental research</p>
+					<p>38% of students participate in study abroad, more than any masters level institution in Wisconsin and raned 10th nationally among all masters schools with study abrod programs</p>
+				</div>
+				<div class="right">
+					<h3>History</h3>
+					<h5>Eau Claire State Normal School(1916-1927)</h5>
+					<p>UWEC first opened as the Eau Claire State Normal School in 1916, it was just a single building now
+					known as Scholfield hall. The school provided eduaction for teachers and principals</p>
+					<h5>Eau Claire State Teachers College(1927-1951)</h5>
+					<p>After gaining authorization to offer four years of higher eduaction and the ability to grant
+					its students a bachelors degree in education, the name of the school was changed to Eau Claire State Teachers
+					College. A few years after the first big expansion projects were starting.</p>
+					<h5>Wisconsin State College at Eau Claire(1951-1964)</h5>
+					<p>In 1951 the Board of Regents gave the college the ability to grant a bachelor of arts degrees and
+					bachelor or science degrees in liberal arts. The name was then changed to Wisconsin State College at Eau Claire.</p>
+					<h5>Wisconsin State University-Eau Claire(1964-1971)</h5>
+					<p>In 1964 the college gained university standing. The institution was then renamed to Wisconsin State University-Eau Claire.
+					During this time a 50 million dollar building program was realized. 7 new residence halls, 2 food and recreacion centers,
+					the Phillps hall, the school of nursing, and the McPhee center were all built in this time. Among this were expansions to the Davies center and the
+					McIntyre Library.</p>
+					<h5>The University of Wisconsin-Eau Claire(1971-Present)</h5>
+					<p>Aftter merging into the Wisconsin State University System and the University of Wisconsin System the institution
+					was renamed to The University of Wisconsin-Eau Claire as we know it today. </p>
+				</div>
+			</div>
+			<div id="images">
+				<div id="leftimg">
+					<img src="images/uwec1.jpg" alt="UWEC Campus"/>
+					<p>UWEC Campus</p>
+				</div>
+				<div id="rightimg">
+					<img src="images/uwec3.jpg" alt="Photo of Blu The Mascot"/>
+					<p>Photo Of Blu The Mascot</p>
+				</div>
+			</div>
 		</div>
 	</div>
 </body>
