--- a/uwec.html
+++ b/uwec.html
@@ -61,7 +61,7 @@
 					<p>UWEC Campus</p>
 				</div>
 				<div id="rightimg">
-					<img src="images/uwec3.jpg" alt="Photo of Blu The Mascot"/>
+					<img src="images/uwec3.JPG" alt="Photo of Blu The Mascot"/>
 					<p>Photo Of Blu The Mascot</p>
 				</div>
 			</div>
